//! gRPC server for StreamingService
//!
//! This module implements the StreamingService gRPC server.
//! The service provides live streaming functionality including:
//! - Start/stop live streams
//! - Get stream status and analytics
//! - Generate streaming manifests (HLS/DASH)
//! - Broadcast chat messages
//! - Update streaming profiles

use sqlx::PgPool;
use tonic::{Request, Response, Status};
use tracing::{debug, info};

// Generated protobuf types and service traits
pub mod proto {
    pub mod streaming {
        pub mod v1 {
            tonic::include_proto!("nova.streaming.v1");
        }
    }
}

pub use proto::streaming::v1::{
    streaming_service_server, BroadcastChatMessageRequest, BroadcastChatMessageResponse,
    GetStreamAnalyticsRequest, GetStreamAnalyticsResponse, GetStreamStatusRequest,
    GetStreamingManifestRequest, GetStreamingManifestResponse, StartStreamRequest,
    StartStreamResponse, StopStreamRequest, StopStreamResponse, StreamAnalytics, StreamMetrics,
    StreamStatus, StreamingProfile, UpdateStreamingProfileRequest, UpdateStreamingProfileResponse,
};

/// StreamingService gRPC server implementation
#[derive(Clone)]
pub struct StreamingServiceImpl {
    pool: PgPool,
}

impl StreamingServiceImpl {
    /// Create a new StreamingService implementation
    pub fn new(pool: PgPool) -> Self {
        Self { pool }
    }
}

#[tonic::async_trait]
impl streaming_service_server::StreamingService for StreamingServiceImpl {
    async fn start_stream(
        &self,
        request: Request<StartStreamRequest>,
    ) -> Result<Response<StartStreamResponse>, Status> {
        let req = request.into_inner();
        info!("Starting stream for user: {}", req.user_id);

        // TODO: Implement actual stream startup logic
        let now = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;

        Ok(Response::new(StartStreamResponse {
            stream_id: uuid::Uuid::new_v4().to_string(),
            ingest_url: "rtmp://ingest.example.com/live".to_string(),
            ingest_key: "stream_key_placeholder".to_string(),
            playback_url: "https://play.example.com/hls/stream.m3u8".to_string(),
            started_at: now,
        }))
    }

    async fn stop_stream(
        &self,
        request: Request<StopStreamRequest>,
    ) -> Result<Response<StopStreamResponse>, Status> {
        let req = request.into_inner();
        info!("Stopping stream: {}", req.stream_id);

        // TODO: Implement actual stream stop logic
        let now = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;

        Ok(Response::new(StopStreamResponse {
            stream_id: req.stream_id,
            success: true,
            stopped_at: now,
        }))
    }

    async fn get_stream_status(
        &self,
        request: Request<GetStreamStatusRequest>,
    ) -> Result<Response<StreamStatus>, Status> {
        let req = request.into_inner();
        debug!("Getting status for stream: {}", req.stream_id);

        // TODO: Implement actual status retrieval logic
        let now = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;

        Ok(Response::new(StreamStatus {
            stream_id: req.stream_id,
            user_id: "user_placeholder".to_string(),
            title: "Stream Title".to_string(),
            status: "live".to_string(),
            started_at: now,
            ended_at: 0,
            viewer_count: 0,
            duration_seconds: 0,
            metrics: None,
        }))
    }

    async fn get_streaming_manifest(
        &self,
        request: Request<GetStreamingManifestRequest>,
    ) -> Result<Response<GetStreamingManifestResponse>, Status> {
        let req = request.into_inner();
        debug!("Getting manifest for stream: {} (format: {})", req.stream_id, req.format);

        // TODO: Implement actual manifest generation logic
        let now = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;

        Ok(Response::new(GetStreamingManifestResponse {
            manifest_url: format!("https://stream.example.com/{}/manifest.m3u8", req.stream_id),
            content: "".to_string(),
            generated_at: now,
        }))
    }

    async fn update_streaming_profile(
        &self,
        request: Request<UpdateStreamingProfileRequest>,
    ) -> Result<Response<UpdateStreamingProfileResponse>, Status> {
        let req = request.into_inner();
        info!("Updating profile for stream: {}", req.stream_id);

        // TODO: Implement actual profile update logic
        Ok(Response::new(UpdateStreamingProfileResponse {
            stream_id: req.stream_id,
            success: true,
        }))
    }

    async fn get_stream_analytics(
        &self,
        request: Request<GetStreamAnalyticsRequest>,
    ) -> Result<Response<GetStreamAnalyticsResponse>, Status> {
        let req = request.into_inner();
        debug!("Getting analytics for stream: {}", req.stream_id);

        // TODO: Implement actual analytics retrieval logic
        Ok(Response::new(GetStreamAnalyticsResponse {
            analytics: Some(StreamAnalytics {
                stream_id: req.stream_id,
                total_viewers: 0,
                unique_viewers: 0,
                peak_concurrent_viewers: 0,
                average_watch_time_minutes: 0.0,
                engagement_rate: 0.0,
                viewer_count_timeline: vec![],
            }),
        }))
    }

    async fn broadcast_chat_message(
        &self,
        request: Request<BroadcastChatMessageRequest>,
    ) -> Result<Response<BroadcastChatMessageResponse>, Status> {
        let req = request.into_inner();
        debug!("Broadcasting message to stream: {} from user: {}", req.stream_id, req.user_id);

        // TODO: Implement actual message broadcast logic
        let now = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap_or_default()
            .as_secs() as i64;

        Ok(Response::new(BroadcastChatMessageResponse {
            message_id: uuid::Uuid::new_v4().to_string(),
            success: true,
            timestamp: now,
        }))
    }
}
